# insightface_ncnn_andorid_example

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/mtcnn_as/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ag.param  det1.param  det2.param  det3.param  det4.param  faceDetector.param  faceRecognize.param
app/src/main/java/com/mtcnn_as/: MTCNN.java  MainActivity.java  Utils.java
app/src/main/jni/: CMakeLists.txt  mtcnn.cpp  mtcnn.h  mtcnn_jni.cpp
app/src/main/jni/face/: CMakeLists.txt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/mtcnn_as/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
